--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Puja Wisasongko</title>
   <link rel="stylesheet" href="krs.css">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
