--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Puja Wisasongko</title>
-  <link rel="stylesheet" href="krs.css">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <title>Suit Jawa v2</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
-  <div class="main--container">
-    <div class="the--box">
-      <div class="content--container">
-        <div class="title--container">
-          <p>RESUME</p>
-        </div>
-        <div class="main--content">
-          <div class="left-side">
-            <p>Hello world</p>
-          </div>
-          <div class="right-side">
-            <div class="my-photo">
+<h1>Suwit Jawa v2.0</h1>
 
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="container">
+  <div class="area-komputer">
+    <img src="img/gajah.png" class="img-komputer">
   </div>
+  <div class="info"></div>
+  <div class="area-player">
+    <ul>
+      <li>
+        <img src="img/gajah.png" class="gajah">
+      </li>
+      <li>
+        <img src="img/orang.png" class="orang">
+      </li>
+      <li>
+        <img src="img/semut.png" class="semut">
+      </li>
+    </ul>
+  </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
